--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
       <header class="header">
         <img
-          class="logo_place-header"
+          class="logo_place_header"
           src="images/logo_place_header.png"
           alt="logo Tripleten">
         <h1 class="header__title">Aprender a aprender</h1>
@@ -201,58 +201,58 @@
           alt="feynman primer plano">
       </section>
       <section class="digits">
-        <h2 class="section-title">Datos y figuras</h2>
-        <h3 class="section-subtitle">El aprendizaje y el cerebro</h3>
-        <ul class="digits__table">
-          <li class="digits__table_cell">
-            <h4 class="digits__table_heading">86 billones</h4>
-            <p class="digits__table_text">
+        <h2 class="digits-title">Datos y figuras</h2>
+        <h3 class="digits-subtitle">El aprendizaje y el cerebro</h3>
+        <ul class="table">
+          <li class="table__cell">
+            <h4 class="table__heading">86 billones</h4>
+            <p class="table__text">
               número de neuronas en el cerebro humano
             </p>
           </li>
-          <li class="digits__table_cell">
-            <h4 class="digits__table_heading">73 %</h4>
-            <p class="digits__table_text">
+          <li class="table__cell">
+            <h4 class="table__heading">73 %</h4>
+            <p class="table__text">
               Porcentaje de adultos en EE. UU. que se consideran alumnos de por
               vida
             </p>
             <p>- Pew Research Center</p>
           </li>
-          <li class="digits__table_cell">
-            <h4 class="digits__table_heading">1000 terabytes</h4>
-            <p class="digits__table_text">
+          <li class="table__cell">
+            <h4 class="table__heading">1000 terabytes</h4>
+            <p class="table__text">
               La capacidad de almacenamiento de información de un ser humano
             </p>
           </li>
-          <li class="digits__table_cell">
-            <h4 class="digits__table_heading">500 trillones</h4>
-            <p class="digits__table_text">
+          <li class="table__cell">
+            <h4 class="table__heading">500 trillones</h4>
+            <p class="table__text">
               El número de sinapsis nerviosas responsables del aprendizaje en un
               ser humano adulto medio
             </p>
           </li>
-          <li class="digits__table_cell">
-            <h4 class="digits__table_heading">420 millones</h4>
-            <p class="digits__table_text">
+          <li class="table__cell">
+            <h4 class="table__heading">420 millones</h4>
+            <p class="table__text">
               El número de adultos menores de 25 años con una educación
               insuficiente para encontrar empleo.
             </p>
             <p>Banco Mundial, 2017</p>
           </li>
-          <li class="digits__table_cell">
-            <h4 class="digits__table_heading">26 años</h4>
-            <p class="digits__table_text">
+          <li class="table__cell">
+            <h4 class="table__heading">26 años</h4>
+            <p class="table__text">
               La edad a la que Albert Einstein publicó su innovador artículo
               sobre la relatividad especial
             </p>
           </li>
-          <li class="digits__table_cell">
-            <h4 class="digits__table_heading">1885</h4>
-            <p class="digits__table_text">Desarrollo de la curva del olvido</p>
+          <li class="table__cell">
+            <h4 class="table__heading">1885</h4>
+            <p class="table__text">Desarrollo de la curva del olvido</p>
           </li>
-          <li class="digits__table_cell">
-            <h4 class="digits__table_heading">1897</h4>
-            <p class="digits__table_text">
+          <li class="table__cell">
+            <h4 class="table__heading">1897</h4>
+            <p class="table__text">
               Publicación de las investigaciones de Ivan Pavlov sobre el
               condicionamiento clásico
             </p>
